# stars

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp
client/Base/: FontManager.cpp  FontManager.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  MapArea.cpp  MapArea.h  Surface.cpp  Surface.h  Timer.cpp  Timer.h
client/Network/: Connection.cpp  Connection.h  Connection.h~  ConnectionManager.cpp  ConnectionManager.h  DataHandler.cpp  DataHandler.h  ProtobufHandler.cpp  ProtobufHandler.h
client/Objects/: KillableObject.cpp  KillableObject.h  Particle.cpp  Particle.h  SelectableObject.cpp  SelectableObject.h  Ship.cpp  Ship.h  Star.cpp  Star.h  VisibleObject.cpp  VisibleObject.h  VisibleObjectManager.cpp  VisibleObjectManager.h
client/Resources/Windows/: LoginWindow.xml
client/Widgets/: Button.cpp  Button.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  Widget.cpp  Widget.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
client/Windows/: LineEditWindow.cpp  LineEditWindow.h  LoginWindow.cpp  LoginWindow.h
cmake_modules/: FindSDL_gfx.cmake  SDLConfig.cmake
server/: CMakeLists.txt  run.sh
server/abstract_service/: AbstractService.cpp  AbstractService.h  UnifierProtocol.proto
server/frontend_service/: CMakeLists.txt  Protocol.proto  main.cpp  server.cpp  server.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
server/persistent_data_service/: CMakeLists.txt  main.cpp  mysqlbackend.cpp  mysqlbackend.h  server.cpp  server.h
server/ticking_service/: CMakeLists.txt  server.cpp  server.h
server/unifier_service/: CMakeLists.txt  main.cpp  server.cpp  server.h  sessionmanager.cpp  sessionmanager.h
tools/: CMakeLists.txt
tools/dialog_editor/: CMakeLists.txt  LoginWindow.xml  main.cpp
tools/dialog_editor/Base/: EditorLoop.cpp  EditorLoop.h
tools/dialog_editor/Resources/Windows/: LineEditWindow.xml  LoginWindow.xml
